# foundry-code

./: Cargo.toml  Justfile  README.md
.github/: copilot-instructions.md
.github/actions/setup-cache/: action.yml
.github/actions/setup-just/: action.yml
.github/instructions/: README.md  code-quality.instructions.md  dependency-management.instructions.md  development-workflow.instructions.md  testing-standards.instructions.md
.github/workflows/: rust.yml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/identity/: Cargo.toml
crates/terminal/: Cargo.toml
crates/terminal/src/: app.rs  commands.rs  events.rs  lib.rs  terminal.rs
crates/terminal/src/ui/: layout.rs  mod.rs  widgets.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  commands.rs  events.rs  lib.rs
crates/tui/src/ui/: layout.rs  render.rs  widgets.rs
tests/: integration_tests.rs
