[workspace]
members = ["crates/core", "crates/identity", "crates/terminal"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"

[package]
name = "foundry-code"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
foundry-terminal = { path = "crates/terminal" }

[[bin]]
name = "foundry"
path = "src/bin/foundry.rs"
